--- a/iDom_server-build-desktop-Qt_4_8_2__System__Release/Makefile
+++ b/iDom_server-build-desktop-Qt_4_8_2__System__Release/Makefile
@@ -15,7 +15,7 @@ CFLAGS        = -pipe -O2 -Wall -W $(DEFINES)
 CXXFLAGS      = -pipe -O2 -Wall -W $(DEFINES)
 INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++ -I../iDom_server -I../iDom_server -I.
 LINK          = g++
-LFLAGS        = -Wl,-O1
+LFLAGS        = -Wl,-O2 -J4
 LIBS          = $(SUBLIBS)   -L/usr/local/lib -lwiringPi -lmpd -llirc_client -pthread 
 AR            = ar cqs
 RANLIB        = 
