poprawiono bug z thinkspeak + nowe  BT

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -25,6 +25,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../libs/emoji/emoji.cpp"
     "../../src/blockQueue/blockqueue.cpp"
     "../../src/functions/functions2.cpp"
+    "../../src/functions/tests/functions_BT.cpp"
     "../../src/iDomStatus/idomstatus.cpp"
     "../../src/iDomTools/test/idomTools_BT.cpp"
     )
