--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/RADIO_433_eq/radio_button.cpp"
     "../../src/RADIO_433_eq/radio_433_eq.cpp"
     "../../src/iDomTools/test/idomTools_BT.cpp"
+    "../../src/iDomTools/test/testJSON.h"
     "../../src/iDomTools/idomtools.cpp"
     "../../libs/sunrise-sunset/sunriseset.cpp"
     "../../src/THERMOMETER_CONTAINER/thermometer_container.cpp"
@@ -37,6 +38,6 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/command/commandClass/TEST/command_ardu_BT.cpp"
     )
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -DBT_TEST -DNOSSL")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DBT_TEST -DNOSSL")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  pthread gtest curl rt pthread gmock)
