nowa klasa lightning

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -18,8 +18,10 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/RADIO_433_eq/radio_button.cpp"
     "../../src/RADIO_433_eq/radio_433_eq.cpp"
     "../../src/iDomTools/test/idomTools_BT.cpp"
+    "../../src/iDomTools/test/lightning_BT.cpp"
     "../../src/iDomTools/test/testJSON.h"
     "../../src/iDomTools/idomtools.cpp"
+    "../../src/iDomTools/lightning.cpp"
     "../../libs/sunrise-sunset/sunriseset.cpp"
     "../../src/THERMOMETER_CONTAINER/thermometer_container.cpp"
     "../../src/iDomTools/idomtools_mpd.cpp"
