dodano klase state save  do jsona na dyzku

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -22,6 +22,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/iDomTools/test/testJSON.h"
     "../../src/iDomTools/idomtools.cpp"
     "../../src/iDomTools/lightning.cpp"
+    "../../src/iDomSaveState/idom_save_state.cpp"
+    "../../src/iDomSaveState/test/iDomSaveState_BT.cpp"
     "../../libs/sunrise-sunset/sunriseset.cpp"
     "../../src/THERMOMETER_CONTAINER/thermometer_container.cpp"
     "../../src/iDomTools/idomtools_mpd.cpp"
