kolejny test z SetuUP

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/functions/tests/functions_BT.cpp"
     "../../src/iDomStatus/idomstatus.cpp"
     "../../src/iDomTools/test/idomTools_BT.cpp"
+    "../../src/iDomTools/test/iDomTools_fixture.h"
     "../../src/thread_functions/rs232_thread.h"
     "../../src/thread_functions/TEST/rs232_thread_BT.cpp"
     "../../src/433MHz/RFLink/TEST/rflinkhandler_BT.cpp"
