dodano zapis konfiguracji 433mhz  do jsona

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../libs/sunrise-sunset/sunriseset.cpp"
     "../../src/THERMOMETER_CONTAINER/thermometer_container.cpp"
     "../../src/iDomTools/idomtools_mpd.cpp"
+    "../../src/iDomTools/idomtools_system.cpp"
     "../../libs/emoji/emoji.cpp"
     "../../src/blockQueue/blockqueue.cpp"
     "../../src/functions/functions2.cpp"
