--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -41,6 +41,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/command/command.cpp"
     "../../src/command/commandClass/command_ardu.cpp"
     "../../src/command/commandClass/TEST/command_ardu_BT.cpp"
+    "../../src/command/commandClass/command_433mhz.cpp"
+    "../../src/command/commandClass/TEST/command_433mhz_BT.cpp"
     )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DBT_TEST -DNOSSL")
