test crypto+ czyszczenie + rezygnacja z ardupi serial

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../libs/emoji/emoji.cpp"
     "../../src/blockQueue/blockqueue.cpp"
     "../../src/functions/functions2.cpp"
+    "../../src/functions/tests/functions_stub.cpp"
     "../../src/functions/tests/functions_BT.cpp"
     "../../src/iDomStatus/idomstatus.cpp"
     "../../src/iDomTools/test/idomTools_BT.cpp"
@@ -43,6 +44,12 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/command/commandClass/TEST/command_ardu_BT.cpp"
     "../../src/command/commandClass/command_433mhz.cpp"
     "../../src/command/commandClass/TEST/command_433mhz_BT.cpp"
+    "../../src/c_connection/test/c_connection_BT.cpp"
+    "../../src/c_connection/c_connection_node.cpp"
+    "../../src/c_connection/c_connection2.cpp"
+    "../../src/c_connection/c_connection.cpp"
+    "../../src/LCD_c/test/lcd_c_stub.cpp"
+    "../../src/command/test/commandhandler_stub.cpp"
     )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DBT_TEST -DNOSSL")
