--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/iDomTools/idomtools_system.cpp"
     "../../libs/emoji/emoji.cpp"
     "../../src/blockQueue/blockqueue.cpp"
+    "../../src/blockQueue/test/blockqueue_BT.cpp"
     "../../src/functions/functions2.cpp"
     "../../src/functions/tests/functions_stub.cpp"
     "../../src/functions/tests/functions_BT.cpp"
