--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -35,6 +35,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/iDomSaveState/idom_save_state.cpp"
     "../../src/iDomSaveState/test/iDomSaveState_BT.cpp"
     "../../src/THERMOMETER_CONTAINER/thermometer_container.cpp"
+    "../../src/THERMOMETER_CONTAINER/test/thermometer_container_BT.cpp"
     "../../src/iDomTools/idomtools_mpd.cpp"
     "../../src/iDomTools/idomtools_system.cpp"
     "../../src/blockQueue/blockqueue.cpp"
