--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/RADIO_433_eq/radio_433_eq.cpp"
     "../../src/iDomTools/test/idomTools_BT.cpp"
     "../../src/iDomTools/test/lightning_BT.cpp"
+    "../../src/iDomTools/test/iDom_server_BT.cpp"
     "../../src/iDomTools/test/testJSON.h"
     "../../src/iDomTools/idomtools.cpp"
     "../../src/iDomTools/lightning.cpp"
