nowe BT komendy idom

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -56,6 +56,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/command/commandClass/TEST/command_ardu_BT.cpp"
     "../../src/command/commandClass/command_433mhz.cpp"
     "../../src/command/commandClass/TEST/command_433mhz_BT.cpp"
+    "../../src/command/commandClass/command_idom.cpp"
+    "../../src/command/commandClass/TEST/command_idom_BT.cpp"
     "../../src/command/test/commandhandler_stub.cpp"
     "../../src/c_connection/test/c_connection_BT.cpp"
     "../../src/c_connection/c_connection_node.cpp"
