--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -49,6 +49,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/iDomTools/test/iDomTools_fixture.h"
     "../../src/thread_functions/rs232_thread.h"
     "../../src/thread_functions/TEST/rs232_thread_BT.cpp"
+    "../../src/thread_functions/iDom_thread.h"
+    "../../src/thread_functions/iDom_thread.cpp"
     "../../src/433MHz/RFLink/TEST/rflinkhandler_BT.cpp"
     "../../src/433MHz/RFLink/rflinkhandler.cpp"
     "../../src/command/command.cpp"
