--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -55,11 +55,11 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/433MHz/RFLink/rflinkhandler.cpp"
     "../../src/command/command.cpp"
     "../../src/command/commandClass/command_ardu.cpp"
-    "../../src/command/commandClass/TEST/command_ardu_BT.cpp"
+#    "../../src/command/commandClass/TEST/command_ardu_BT.cpp"
     "../../src/command/commandClass/command_433mhz.cpp"
-    "../../src/command/commandClass/TEST/command_433mhz_BT.cpp"
+ #   "../../src/command/commandClass/TEST/command_433mhz_BT.cpp"
     "../../src/command/commandClass/command_idom.cpp"
-    "../../src/command/commandClass/TEST/command_idom_BT.cpp"
+ #   "../../src/command/commandClass/TEST/command_idom_BT.cpp"
     "../../src/c_connection/test/c_connection_BT.cpp"
     "../../src/c_connection/c_connection_node.cpp"
     "../../src/c_connection/c_connection2.cpp"
@@ -95,6 +95,7 @@ message(${GIT_COMMIT_HASH})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DBT_TEST -DNOSSL -O3 -fprofile-instr-generate -fcoverage-mapping")
 set(CMAKE_CXX_COMPILER "/usr/bin/clang++-3.9")
 file(GLOB SOURCE_FILES2 "../../src/command/*.cpp"
+    "../../src/command/commandClass/TEST/*.cpp"
     "../../src/command/commandClass/*.cpp"
     "../../src/command/test/*.cpp")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${SOURCE_FILES2})
