--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -70,24 +70,24 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/logger/logger.cc"
     )
 # Get the current working branch
-execute_process(
-  COMMAND git rev-parse --abbrev-ref HEAD
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_BRANCH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
+#execute_process(
+#  COMMAND git rev-parse --abbrev-ref HEAD
+#  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+#  OUTPUT_VARIABLE GIT_BRANCH
+#  OUTPUT_STRIP_TRAILING_WHITESPACE
+#)
 # Get the latest abbreviated commit hash of the working branch
-execute_process(
-  COMMAND git rev-parse HEAD
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_COMMIT_HASH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
+#execute_process(
+#  COMMAND git rev-parse HEAD
+#  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+#  OUTPUT_VARIABLE GIT_COMMIT_HASH
+#  OUTPUT_STRIP_TRAILING_WHITESPACE
+#)
 
-add_definitions(-DGIT_COMMIT_HASH="${GIT_COMMIT_HASH}")
-add_definitions(-DGIT_BRANCH="${GIT_BRANCH}")
+#add_definitions(-DGIT_COMMIT_HASH="${GIT_COMMIT_HASH}")
+#add_definitions(-DGIT_BRANCH="${GIT_BRANCH}")
 message("dane :")
-message(${GIT_COMMIT_HASH})
+#message(${GIT_COMMIT_HASH})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DBT_TEST -DNOSSL -O3 -fprofile-instr-generate -fcoverage-mapping")
 set(CMAKE_CXX_COMPILER "/usr/bin/clang++-3.9")
@@ -96,4 +96,4 @@ file(GLOB SOURCE_FILES2 "../../src/command/*.cpp"
     "../../src/command/commandClass/*.cpp"
     "../../src/command/test/*.cpp")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${SOURCE_FILES2})
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  pthread gtest curl rt pthread gmock)
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  pthread gtest curl rt pthread )
