--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ matrix:
             - clang-5.0
       env:
         - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
-scritp: make
+
 before_install:
     - eval "${MATRIX_EVAL}"
     
+scritp: 
+echo "PIES"
+make
