--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ matrix:
 
 before_install:
     - eval "${MATRIX_EVAL}"
+    - chmod +x make_unit_test.sh
     
 script: "bash -c ./make_unit_test.sh"
