--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -5,7 +5,7 @@ project(iDom_TESTs-CMAKE)
 
 set(INCLUDE_DIRECTORIES "../../json2/" #"../../json/single_include/nlohmann/"
     "../../test/iDom_TESTs-CMAKE/"
-    "/home/cyniu/GIT/WiringPi/wiringPi")
+    "../../test/libs_test/wiringPi")
     #"/home/cyniu/GIT/malina/iDom_server_OOP/arduPi")
 
 include_directories(${INCLUDE_DIRECTORIES})
