--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 before_script:
-  - sudo apt-get install -y mpd curl libmpdclient-dev libgtest-dev
+  - sudo apt-get install -y libmpd-dev curl libmpdclient-dev libgtest-dev
   
 matrix:
   include:
