--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 before_script:
-  - sudo apt-get install -y libmpd-dev curl libmpdclient-dev libgtest-dev libgmock-dev
+  - sudo apt-get install -y libmpd-dev curl libmpdclient-dev libgtest-dev google-mock
   - cd /usr/src/gmock
   - sudo mkdir build
   - sudo cmake ..
