--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_script:
   - sudo apt-get install -y libmpd-dev curl libmpdclient-dev libgtest-dev google-mock
   - cd /usr/src/gmock
   - sudo mkdir build
+  - sudo cd build
   - sudo cmake ..
   - sudo make
   - sudo cp *.a /usr/lib
