--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,27 @@
 language: cpp
-compiler: gcc
+compiler: clang
 dist: trusty
 
 before_install:
   # C++17
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+  - sudo apt-get install libmpd-dev curl libmpdclient-dev libgtest-dev cmake
 
 install: 
   # C++17
-  - sudo apt-get install -qq g++-6
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
 
+  - sudo apt-get install -y clang-5.0
+  
+  - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
+  - sudo tar xf release-1.7.0.tar.gz
+  - cd googletest-release-1.7.0
+  - sudo cmake -DBUILD_SHARED_LIBS=ON .
+  - sudo make
+  - sudo cp -a include/gtest /usr/include
+  - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
+  - cd "${TRAVIS_BUILD_DIR}"
+  
 script:
   - pwd  
   - echo "tam jestem"
@@ -22,10 +32,10 @@ script:
   - cd ..
   - echo "koniec budowania koko"
 
-  - sudo ln /usr/bin/g++-6 /usr/bin/clang++
-  - echo "start build iDom BT"
-  - cd iDom*/test/iDom*
-  - ls
-  - cmake .
-  - make  
-  - ./iDom_TESTs-CMAKE
+  #- sudo ln /usr/bin/g++-6 /usr/bin/clang++
+  #- echo "start build iDom BT"
+  #- cd iDom*/test/iDom*
+ # - ls
+ # - cmake .
+  #- make  
+  #- ./iDom_TESTs-CMAKE
