--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
           name: Installing SUDO
           command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
       - run:
-          name: Installing GCC
-          command: 'apt-get update && apt-get install -y gcc clang-6.0'
+          name: Installing clang
+          command: 'apt-get update && apt-get install -y gcc clang'
       - run:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
