--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,14 @@ jobs:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
+          name: pwd
+          command: 'pwd'
+      - run:
           name: go to koko
           command: 'cd koko'
+      - run:
+          name: pwd
+          command: 'pwd'
       - run:
           name: Creating Build Files
           command: 'cmake .'
