--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: 'apt-get update && apt-get install -y gcc clang'
       - run:
           name: Install CMAKE GIT
-          command: 'apt-get update && sudo apt-get install -y cmake git'
+          command: 'apt-get update && sudo apt-get install -y cmake cd'
       - run:
           name: ls
           command: 'ls'
