--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: 'apt-get update && apt-get install -y gcc clang'
       - run:
           name: Install CMAKE GIT
-          command: 'apt-get update && sudo apt-get install -y cmake cd'
+          command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
           name: ls
           command: 'ls'
@@ -26,10 +26,10 @@ jobs:
           command: 'ls'
       - run:
           name: Creating Build Files
-          command: 'cmake .'
+          command: 'cmake koko/'
       - run:
           name: Creating Binary Files
-          command: 'make'
+          command: 'make koko/'
       - run:
           name: Point Unit Testing
-          command: './koko'
+          command: './koko/koko'
