--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,11 @@ jobs:
           name: Install CMAKE GIT
           command: 'apt-get update && sudo apt-get install -y cmake git'
       - run:
-          name: submodule
-          command: 'git submodule init'
+          name: submodule init
+          command: 'git submodule init && git submodule update --recursive --remote'
+      - run:
+          name: submodule update
+          command: 'git submodule update --recursive --remote'
       - run:
           name: ls
           command: 'ls'
