--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: 'apt-get update && apt-get install -y gcc clang'
       - run:
           name: Install CMAKE GIT
-          command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libmpdclient-dev libgtest-dev google-mock'
+          command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl-dev libmpdclient-dev libgtest-dev google-mock'
       - run:
           name: submodule init
           command: 'git submodule init && git submodule update --recursive --remote'
