--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: Install CMAKE GIT
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
       - run:
+          name: google test init
+          command: sudo ln -s /usr/src/gtest/libgtest_main.a /usr/local/lib/libgtest_main.a && sudo ln -s /usr/src/gtest/libgtest.a /usr/local/lib/libgtest.a
+      - run:
           name: submodule init
           command: 'git submodule init && git submodule update --recursive --remote'
       - run:
@@ -57,7 +60,7 @@ jobs:
           command: 'ls iDom_server_OOP/test/iDom_TESTs-CMAKE/'
       - run:
           name: Creating Binary Files
-          command: 'make -C iDom_server_OOP/test/iDom_TESTs-CMAKE/'
+          command: 'make -j2 -C iDom_server_OOP/test/iDom_TESTs-CMAKE/'
       - run:
           name: ls
           command: 'ls iDom_server_OOP/test/iDom_TESTs-CMAKE/'
