--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,7 @@ jobs:
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
       - run:
           name: google test init
-          command: cd /usr/src/gtest
-                   sudo cmake CMakeLists.txt
-                   sudo make
-                   sudo cp *.a /usr/lib
+          command: cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp *.a /usr/lib
       - run:
           name: submodule init
           command: 'git submodule init && git submodule update --recursive --remote'
