--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
           name: submodule update
           command: 'git submodule update --recursive --remote'
       - run:
-          name: ls
-          command: 'ls'
+          name: ramdisk
+          command: 'makdir /mnt/ramdisk'
       - run:
           name: go to koko
           command: 'cd koko/'
