--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,3 +70,7 @@ jobs:
       - run:
           name: runt
           command: './iDom_server_OOP/test/iDom_TESTs-CMAKE/iDom_TESTs-CMAKE'
+      - run:
+          name: show logs
+          command: 'cat /mnt/ramdisk/iDom_log_BT.log'
+          
