--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Installing SUDO
-          command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
-      - run:
-          name: Installing clang
-          command: 'apt-get update && apt-get install -y gcc clang'
+          name: Installing SUDO && clang
+          command:
+           ->
+            'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
+            'apt-get update && apt-get install -y gcc clang'
       - run:
           name: Install CMAKE GIT
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
