--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,8 @@ jobs:
       - checkout
       - run:
           name: Installing SUDO && clang
-          command:
-           ->
-            'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
-            'apt-get update && apt-get install -y gcc clang'
+          command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
+          command: 'apt-get update && apt-get install -y gcc clang'
       - run:
           name: Install CMAKE GIT
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
