--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
           name: Installing SUDO && clang
           command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
-          command: 'apt-get update && apt-get install -y gcc clang'
+                   'apt-get update && apt-get install -y gcc clang'
       - run:
           name: Install CMAKE GIT
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
