--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,10 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   - sudo apt-get install libmpd-dev curl libmpdclient-dev libgtest-dev cmake
+  - cd /usr/src/gtest
+  - sudo cmake CMakeLists.txt
+  - sudo make
+  - sudo cp *.a /usr/lib
 
 install: 
   # C++17
