--- a/.travis.yml
+++ b/.travis.yml
@@ -25,16 +25,17 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   - sudo apt-get install libmpd-dev curl libmpdclient-dev libgtest-dev cmake
-  - cd /usr/src/gtest
-  - sudo cmake CMakeLists.txt
-  - sudo make
-  - sudo cp *.a /usr/lib
 
 install: 
   # C++17
 
   
 script:
+  - cd /usr/src/gtest
+  - sudo cmake CMakeLists.txt
+  - sudo make
+  - sudo cp *.a /usr/lib
+  - cd $TRAVIS_BUILD_DIR
   - pwd  
   - echo "tam jestem"
   - cd koko
