--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
           name: go to koko
           command: 'cd koko/'
       - run:
-          name: ls
-          command: 'ls'
+          name: du
+          command: 'du iDom_server_OOP/test/config'
       - run:
           name: Creating Build Files
           command: 'cmake -Bkoko/ -Hkoko/'
