--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   # C++17
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install libmpd-dev curl libmpdclient-dev libgtest-dev cmake
+  - sudo apt-get install libmpd-dev curl libmpdclient-dev libgtest-dev google-mock cmake
 
 install: 
   # C++17
@@ -45,10 +45,10 @@ script:
   - cd ..
   - echo "koniec budowania koko"
 
-  - sudo ln /usr/bin/clang++-6.0 /usr/bin/clang++
-  - echo "start build iDom BT"
-  - cd iDom*/test/iDom*
-  - ls
-  - cmake .
-  - make  
-  - ./iDom_TESTs-CMAKE
+  #- sudo ln /usr/bin/clang++-6.0 /usr/bin/clang++
+ # - echo "start build iDom BT"
+ # - cd iDom*/test/iDom*
+  #- ls
+ # - cmake .
+  #- make  
+  #- ./iDom_TESTs-CMAKE
