--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   # C++17
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install libmpd-dev curl libmpdclient-dev libgtest-dev google-mock cmake
+  - sudo apt-get install libmpd-dev curl libmpdclient-dev cmake git
 
 install: 
   # C++17
@@ -33,10 +33,13 @@ install:
 script:
   - sudo ln /usr/bin/clang++-6.0 /usr/bin/clang++
   - sudo ln /usr/bin/clang-6.0 /usr/bin/clang
-  - cd /usr/src/gtest
-  - sudo cmake CMakeLists.txt
-  - sudo make
-  - sudo cp *.a /usr/lib
+
+  - git clone https://github.com/google/googletest.git
+  - cd googletest
+  - cmake .
+  - make -j4
+  - sudo make install
+  
   - cd $TRAVIS_BUILD_DIR
   - pwd  
   - echo "tam jestem"
@@ -48,8 +51,9 @@ script:
   - echo "koniec budowania koko"
 
   - echo "start build iDom BT"
+  - mkdir /mnt/ramdisk
   - cd iDom*/test/iDom*
   - ls
   - cmake .
-  - make  
+  - make  -j4
   - ./iDom_TESTs-CMAKE
