--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ script:
 
   - echo "start build iDom BT"
   - sudo mkdir /mnt/ramdisk
-  - sudo 777 /mnt/ramdisk
+  - sudo chmod 777 /mnt/ramdisk
   - cd iDom*/test/iDom*
   - ls
   - cmake .
