poprawka w locku przyciskiem 433MHz + wysylanie raportu html

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,5 +61,9 @@ script:
   - llvm-profdata-6.0  merge -o test.profdata default.profraw
   - llvm-cov-6.0 report ./iDom_TESTs-CMAKE -instr-profile=test.profdata -use-color
   - llvm-cov-6.0 show ./iDom_TESTs-CMAKE -instr-profile=test.profdata  -path-equivalence -use-color --format html > coverage.html
-  - curl --upload-file coverage.html https://transfer.sh/coverage.html > log.log
-  - cat log.log
+  - git clone https://github.com/cyniu88/pages.git
+  - cp coverage.html pages/docs/
+  - cd pages
+  - git add .
+  - git commit -a -m "update coverage html"
+  - git push
