--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           name: Installing SUDO && clang
           command: | 
                    apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
-                   apt-get update && apt-get install -y gcc clang
+                   apt-get update && apt-get install -y gcc clang-6.0
       - run:
           name: Install CMAKE GIT and libs
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
