--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,11 @@ jobs:
       - run:
           name: Installing SUDO && clang
           command: | 
-                   apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
-                   apt-get update && apt-get install -y gcc clang-6.0
+                   apt-get update -qq
+                   apt-get install -qq software-properties-common
+                   add-apt-repository -y ppa:ubuntu-toolchain-r/test
+                   apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
+                   apt-get install -qq clang-6.0
       - run:
           name: Install CMAKE GIT and libs
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
