--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ jobs:
                    apt-get install -qq software-properties-common
                    add-apt-repository -y ppa:ubuntu-toolchain-r/test
                    apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
-                   apt-get install -qq clang-6.0
+                   apt-get install -qq clang
+                   clang --version
       - run:
           name: Install CMAKE GIT and libs
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
