--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,8 @@ jobs:
       - run:
           name: Installing SUDO && clang
           command: | 
-                   apt-get update -qq
-                   apt-get install -qq software-properties-common
-                   add-apt-repository -y ppa:ubuntu-toolchain-r/test
-                   apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
-                   apt-get install -qq clang
+                   apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
+                   apt-get update && apt-get install -y gcc clang
                    clang --version
       - run:
           name: Install CMAKE GIT and libs
