--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,17 @@ jobs:
       - image: *docker_image
     steps:
       - run: *install_common
-      - run: |
+      - run:
+        name: Installing SUDO && clang
+        command:|
           apt-get install -qq clang-6.0 sudo
-      - checkout
-      - run: |
+      - run:
+          name: create symbolic link
+          command: | |
           ls /usr/bin
           clang-6.0 --version
+          sudo ln /usr/bin/clang++-6.0 /usr/bin/clang++
+          sudo ln /usr/bin/clang-6.0 /usr/bin/clang
       - run:
           name: Install CMAKE GIT and libs
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock'
