--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
           name: permision
           command: 'sudo chmod +x iDom_server_OOP/test/iDom_TESTs-CMAKE/iDom_TESTs-CMAKE'
       - run:
-          name: runt
+          name: run program
           command: |
                  cd iDom_server_OOP/test/iDom_TESTs-CMAKE/
                  ./iDom_TESTs-CMAKE
@@ -88,5 +88,10 @@ jobs:
           name: show logs
           command: |
                  cat /mnt/ramdisk/iDom_log_BT.log
+      - run:
+          name: generate raport
+          command: |
+                 pwd
+                 ls
                  llvm-profdata-6.0  merge -o test.profdata default.profraw
                  llvm-cov-6.0 report ./iDom_TESTs-CMAKE -instr-profile=test.profdata -use-color
