--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ jobs:
       - run:
           name: generate raport
           command: |
+                 cd iDom_server_OOP/test/iDom_TESTs-CMAKE/
                  pwd
                  ls
                  llvm-profdata-6.0  merge -o test.profdata default.profraw
