--- a/MQTT/sample/CMakeLists.txt
+++ b/MQTT/sample/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 
 project(sample)
 set(SOURCE_FILES  "main.cpp"
-    "../raspberry_osio_client/raspberry_osio_client.cpp"
     )
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} )
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME} mosquitto )
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME} mosquitto pthread)
