--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "iDom_server_OOP/libs"]
 	path = iDom_server_OOP/libs
 	url = https://github.com/cyniu88/libs.git
+[submodule "iDom_server_OOP/mqtt_mosquitto"]
+	path = iDom_server_OOP/mqtt_mosquitto
+	url = git@github.com:cyniu88/mqtt_mosquitto.git
