--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/cyniu88/libs.git
 [submodule "iDom_server_OOP/mqtt_mosquitto"]
 	path = iDom_server_OOP/mqtt_mosquitto
-	url = git@github.com:cyniu88/mqtt_mosquitto.git
+	url = https://github.com/cyniu88/mqtt_mosquitto.git
