--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -26,6 +26,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../libs/event_counters/test/event_BT.cpp"
     "../../libs/sunrise-sunset/sunriseset.cpp"
     "../../libs/emoji/emoji.cpp"
+    "../../libs/generator/generator.cpp"
+    "../../libs/generator/TEST/generator_BT.cpp"
     "../../src/RADIO_433_eq/test/radio_433_test.cpp"
     "../../src/RADIO_433_eq/radio_button.cpp"
     "../../src/RADIO_433_eq/radio_433_eq.cpp"
