--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -62,6 +62,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/command/commandClass/command_433mhz.cpp"
     "../../src/command/commandClass/command_idom.cpp"
     "../../src/c_connection/test/c_connection_BT.cpp"
+    "../../src/command/commandClass/command_wifi.cpp"
+    "../../src/command/commandClass/TEST/command_wifi_bt.cpp"
     "../../src/c_connection/c_connection_node.cpp"
     "../../src/c_connection/c_connection2.cpp"
     "../../src/c_connection/c_connection.cpp"
