nowe zmany w samodiagnozie

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -28,6 +28,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../libs/emoji/emoji.cpp"
     "../../libs/generator/generator.cpp"
     "../../libs/generator/TEST/generator_BT.cpp"
+    "../../libs/alarm/alarm.cpp"
+    "../../libs/alarm/TEST/alarm_BT.cpp"
     "../../src/RADIO_433_eq/test/radio_433_test.cpp"
     "../../src/RADIO_433_eq/radio_button.cpp"
     "../../src/RADIO_433_eq/radio_433_eq.cpp"
