dodano handlera komend gateway

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -80,6 +80,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/KEY/TEST/key_BT.cpp"
     "../../mqtt_mosquitto/MQTT_mosquitto/TEST/mqtt_stub.cpp"
     "../../src/command/commandhandlermqtt.cpp"
+    "../../src/command/commandhandlergateway.cpp"
     "../../src/iDomKEY_ACCESS/idomkey_access.cpp"
     )
 # Get the current working branch
