dodano komende gateway

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -65,6 +65,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/command/commandClass/command_idom.cpp"
     "../../src/c_connection/test/c_connection_BT.cpp"
     "../../src/command/commandClass/command_wifi.cpp"
+    "../../src/command/commandClass/command_gateway.cpp"
+    "../../src/command/commandClass/TEST/command_gateway_bt.cpp"
     "../../src/command/commandClass/TEST/command_wifi_bt.cpp"
     "../../src/c_connection/c_connection_node.cpp"
     "../../src/c_connection/c_connection2.cpp"
